--- a/Plushie-Defence-Analysis/src/PlushieAnalysis.ipynb
+++ b/Plushie-Defence-Analysis/src/PlushieAnalysis.ipynb
@@ -21,7 +21,7 @@
     "    <li>How many attempts on each level?</li>\n",
     "    <li>What's players' favorite winning team competition?</li>\n",
     "</ul>\n",
-    "<p><img src="background.png" alt=\"the background image of Plushie Defence\" width=\"100%\" height=\"auto\" /> \n",
+    "<p><img src=\"background.png\" alt=\"the background image of Plushie Defence\" width=\"100%\" height=\"auto\" /> \n",
     "</p>"
    ]
   },
